[metadata]
name = 'JobFinder'
description-file = README.MD
version = 0.0.1
author = Timothy Brantley II
project-url = https://github.com/theCompanyDream/JobFinder

[files]
packages_root = src
logs = logging.ini
extra_files = setup.py
requests = /src/yaml/request.yaml

[rethinkdb]
server: localhost
port: 8080

[nosetests]
verbosity = 2
nocapture = 1
detailed-errors = 1
